--- a/back2/package.json
+++ b/back2/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "scripts": {
     "开发": "==================================================",
-    "make": "pnpm i  &&  pnpm prisma:generate   &&   pnpm prisma:push",
-    "dev": "nest start --watch",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
+    "make": "              pnpm i  &&  pnpm prisma:generate   &&   pnpm prisma:push",
+    "dev": "               nest start --watch",
+    "prisma:generate": "   npx prisma generate --schema=./schema.prisma",
+    "prisma:push": "       npx prisma db push  --schema=./schema.prisma --force-reset ",
+    "prisma:migrate": "    prisma migrate dev",
+    "prisma:studio": "     prisma studio",
     "其他": "==================================================",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -38,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.18",
     "nestjs-knife4j2": "^1.0.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
