--- a/back2/tsconfig.json
+++ b/back2/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,//支持ES模块导入,才能导入dayjs
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "./dist",
