--- a/back3/package.json
+++ b/back3/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.18",
+    "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -73,6 +74,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "_moduleAliases": {
+    "@src": "./dist"
   },
   "jest": {
     "moduleFileExtensions": [
