--- a/back3/tsconfig.json
+++ b/back3/tsconfig.json
@@ -17,6 +17,7 @@
     "strictBindCallApply": false, // 严格绑定调用和应用
     "forceConsistentCasingInFileNames": false, // 强制一致的文件名大小写
     "noFallthroughCasesInSwitch": false, // 禁用 switch 语句的 fallthrough 检查
+    "noEmitOnError": true, // 禁用编译错误时生成文件
 
     // 路径别名
     "paths": {
