--- a/back3/package.json
+++ b/back3/package.json
@@ -38,7 +38,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "dayjs": "^1.11.18",
+    "dayjs": "1.11.18",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
     "passport": "^0.6.0",
