--- a/back3/package.json
+++ b/back3/package.json
@@ -27,6 +27,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -41,12 +42,20 @@
     "dayjs": "1.11.18",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
+    "nestjs-yup": "^1.0.13",
+    "nestjs-zod": "^5.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "yup": "^1.7.0",
+    "zod": "^4.1.7",
+    "zod-for-nestjs": "^1.0.5",
+    "zod-openapi": "^5.4.1",
+    "zod-to-json-schema": "^3.24.6",
+    "zod-to-openapi": "^0.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
