--- a/back1/package.json
+++ b/back1/package.json
@@ -7,27 +7,21 @@
   "license": "MIT",
   "scripts": {
     "开发": "==================================================",
-    "make": "pnpm i  &&  pnpm prisma:generate   &&   pnpm prisma:push",
-    "dev": "nest start --watch",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "其他": "==================================================",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "dev": "     cross-env ENV=dev nest start   nest start --watch",
+    "dev:make": "pnpm i  &&  pnpm dev:generate   &&   pnpm dev:push",
+    "dev:generate": "prisma generate",
+    "dev:push": "prisma db push",
+    "dev:migrate": "prisma migrate dev",
+    "dev:studio": "prisma studio",
+    "生成": "==================================================",
+    "prod": "nest start --watch",
+    "prod:make": "pnpm i  &&  pnpm prod:generate   &&   pnpm prod:push",
+    "prod:generate": "prisma generate",
+    "prod:push": "prisma db push",
+    "prod:migrate": "prisma migrate dev",
+    "prod:studio": "prisma studio"
   },
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -39,23 +33,14 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^10.0.0",
     "dayjs": "1.11.18",
+    "dotenv": "^17.2.2",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
-    "nestjs-yup": "^1.0.13",
-    "nestjs-zod": "^5.0.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0",
-    "yup": "^1.7.0",
-    "zod": "^4.1.7",
-    "zod-for-nestjs": "^1.0.5",
-    "zod-openapi": "^5.4.1",
-    "zod-to-json-schema": "^3.24.6",
-    "zod-to-openapi": "^0.2.1"
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
