--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,16 +11,16 @@ packages:
   - "back8"
   - "back9"
   # 前端=====================================================
-  - "vue0"
-  - "vue1"
-  - "vue2"
-  - "vue3"
-  - "vue4"
-  - "vue5"
-  - "vue6"
-  - "vue7"
-  - "vue8"
-  - "vue9"
+  - "vuejs0"
+  - "vuejs1"
+  - "vuejs2"
+  - "vuejs3"
+  - "vuejs4"
+  - "vuejs5"
+  - "vuejs6"
+  - "vuejs7"
+  - "vuejs8"
+  - "vuejs9"
 
   # 工具 =====================================================
   - "Tools"
