--- a/back0/.env.dev
+++ b/back0/.env.dev
@@ -1,5 +1,5 @@
   # 🚀 项目描述________________________________________________________________
-VITE_project_name ="服务oss"
+VITE_project_name ="back1"
 VITE_project_remark ="使用nestjs封装,通过jwt验证身份"
 
 
