--- a/back2/package.json
+++ b/back2/package.json
@@ -5,21 +5,22 @@
   "author": "许鹏",
   "private": true,
   "license": "MIT",
+  "prisma": {
+    "schema": "table"
+  },
   "scripts": {
     "开发": "==================== 开发 ====================",
     "make": "     pnpm i  &&  pnpm dev:generate   &&   pnpm dev:push",
     "dev": "          dotenv -e .env.dev --        nest start --watch",
-    "dev:generate": " dotenv -e .env.dev --        prisma generate      --schema=prisma/schema",
-    "dev:push": "     dotenv -e .env.dev --        prisma db push       --schema=prisma/schema",
-    "dev:migrate": "  dotenv -e .env.dev --        prisma migrate dev   --schema=prisma/schema",
-    "dev:studio": "   dotenv -e .env.dev --        prisma studio        --schema=prisma/schema",
+    "dev:generate": " dotenv -e .env.dev --        prisma generate      --schema=table",
+    "dev:push": "     dotenv -e .env.dev --        prisma db push       --schema=table",
+    "dev:migrate": "  dotenv -e .env.dev --        prisma migrate dev   --schema=table",
+    "dev:studio": "   dotenv -e .env.dev --        prisma studio        --schema=table",
     "生成": "==================== 生成 ====================",
     "prod": "        dotenv -e .env.prod --        nest start --watch",
     "pnpm": "pnpm i  "
   },
-  "prisma": {
-    "schema": "prisma/schema"
-  },
+
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
