--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ dist/
 # 排除node_modules
 node_modules/
 **/node_modules/
+
+
+# 排除  pnpm install -D unplugin-vue-components unplugin-auto-import  自动生产引入的代码
+auto-imports.d.ts
+components.d.ts
