--- a/vuejs3/tsconfig.app.json
+++ b/vuejs3/tsconfig.app.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "types": [
-      "element-plus/global" //元素plus自动引入
+      "element-plus/global" //element-plus自动引入
     ],
 
     "paths": {
