--- a/vuejs3/package.json
+++ b/vuejs3/package.json
@@ -15,21 +15,17 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@braks/revue-draggable": "^0.5.1",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "element-plus": "^2.11.2",
     "install": "^0.13.0",
     "lodash": "4.17.21",
-    "npm": "^11.6.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "vue": "^3.5.18",
     "vue-drag-resize": "^1.5.4",
     "vue-draggable-plus": "^0.6.0",
-    "vue-draggable-resizable": "^3.0.0",
-    "vue-router": "^4.5.1",
-    "vuedraggable": "^2.24.3"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
