--- a/vuejs3/package.json
+++ b/vuejs3/package.json
@@ -23,11 +23,15 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "vue": "^3.5.18",
+    "three": "^0.170.0",
     "vue-drag-resize": "^1.5.4",
     "vue-draggable-plus": "^0.6.0",
+    "@unocss/preset-attributify": "^66.2.3",
+    "@unocss/preset-uno": "^66.2.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "unocss": "^66.2.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
