--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "make_all": "pnpm i"
-
+    "make": "pnpm i"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13"
   }
 }
