--- a/back5/package.json
+++ b/back5/package.json
@@ -16,12 +16,16 @@
     "dev:push": "     dotenv -e .env.dev --        prisma db push       --schema=table",
     "dev:migrate": "  dotenv -e .env.dev --        prisma migrate dev   --schema=table",
     "dev:studio": "   dotenv -e .env.dev --        prisma studio        --schema=table",
+    "drizzle": "==================== Drizzle ====================",
+    "db:generate": "  drizzle-kit generate",
+    "db:migrate": "   drizzle-kit migrate",
+    "db:studio": "    drizzle-kit studio",
     "生成": "==================== 生成 ====================",
     "prod": "         dotenv -e .env.prod --        nest start --watch",
     "pnpm": "pnpm i  "
   },
-
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -36,6 +40,8 @@
     "dayjs": "1.11.18",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^9.0.0",
+    "drizzle-orm": "^0.44.5",
+    "drizzle-kit": "^0.31.5",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
