--- a/back4/package.json
+++ b/back4/package.json
@@ -18,6 +18,7 @@
     "dev:studio": "   dotenv -e .env.dev --        prisma studio        --schema=table",
     "drizzle": "==================== Drizzle ====================",
     "db:generate": "  drizzle-kit generate",
+    "db:push": "  drizzle-kit push",
     "db:migrate": "   drizzle-kit migrate",
     "db:studio": "    drizzle-kit studio",
     "生成": "==================== 生成 ====================",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
+    "@libsql/client-wasm": "0.15.15",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -40,8 +42,8 @@
     "dayjs": "1.11.18",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^9.0.0",
-    "drizzle-orm": "^0.44.5",
     "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.5",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
