--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "axios": "^1.7.9",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0"
   }
 }
