--- a/back6/package.json
+++ b/back6/package.json
@@ -20,7 +20,6 @@
     "prod": "         dotenv -e .env.prod --        nest start --watch",
     "pnpm": "pnpm i  "
   },
-
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -39,9 +38,11 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
+    "nestjs-zod": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
