--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -15,6 +15,11 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vue-flow/background": "^1.3.0",
+    "@vue-flow/controls": "^1.1.2",
+    "@vue-flow/core": "^1.38.5",
+    "@vue-flow/minimap": "^1.5.0",
+    "@vue-flow/node-toolbar": "^1.1.0",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "element-plus": "^2.11.2",
