--- a/vuejs6/tsconfig.app.json
+++ b/vuejs6/tsconfig.app.json
@@ -5,7 +5,8 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "types": [
-      "element-plus/global" //element-plus自动引入
+      "element-plus/global", //element-plus自动引入
+      "@vue-macros/reactivity-transform/macros-global" //类型ReactivityTransform响应式数据$ref省略.value
     ],
 
     "paths": {
