--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -15,6 +15,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@unocss/preset-attributify": "^66.2.3",
+    "@unocss/preset-uno": "^66.2.3",
     "@vue-flow/background": "^1.3.0",
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.38.5",
@@ -24,19 +26,17 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.11.2",
     "install": "^0.13.0",
+    "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
-    "vue": "^3.5.18",
     "three": "^0.170.0",
+    "vue": "^3.5.18",
     "vue-drag-resize": "^1.5.4",
     "vue-draggable-plus": "^0.6.0",
-    "@unocss/preset-attributify": "^66.2.3",
-    "@unocss/preset-uno": "^66.2.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "unocss": "^66.2.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -45,6 +45,7 @@
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.8.0",
+    "unocss": "^66.2.3",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^7.0.6",
