--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -30,6 +30,7 @@
     "lodash": "4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "spark-md5": "^3.0.2",
     "three": "^0.170.0",
     "vue": "^3.5.18",
     "vue-drag-resize": "^1.5.4",
