--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -23,6 +23,7 @@
     "@vue-flow/minimap": "^1.5.0",
     "@vue-flow/node-toolbar": "^1.1.0",
     "axios": "^1.10.0",
+    "cropperjs": "^2.0.1",
     "dayjs": "^1.11.13",
     "element-plus": "^2.11.2",
     "install": "^0.13.0",
