--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -23,7 +23,6 @@
     "@vue-flow/minimap": "^1.5.0",
     "@vue-flow/node-toolbar": "^1.1.0",
     "axios": "^1.10.0",
-    "cropperjs": "^2.0.1",
     "dayjs": "^1.11.13",
     "element-plus": "^2.11.2",
     "install": "^0.13.0",
@@ -35,6 +34,7 @@
     "spark-md5": "^3.0.2",
     "three": "^0.170.0",
     "vue": "^3.5.18",
+    "vue-cropper": "^1.1.4",
     "vue-drag-resize": "^1.5.4",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue-macros/reactivity-transform": "3.0.0-beta.22",
