--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -22,8 +22,10 @@
     "@vue-flow/core": "^1.38.5",
     "@vue-flow/minimap": "^1.5.0",
     "@vue-flow/node-toolbar": "^1.1.0",
+    "awesome-qr": "2.1.5-rc.0",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
+    "easyqrcodejs": "^4.6.2",
     "element-plus": "^2.11.2",
     "install": "^0.13.0",
     "jszip": "^3.10.1",
@@ -31,6 +33,7 @@
     "nestjs-zod": "^5.0.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "qrcode": "^1.5.4",
     "spark-md5": "^3.0.2",
     "three": "^0.170.0",
     "vue": "^3.5.18",
