--- a/back6/package.json
+++ b/back6/package.json
@@ -21,6 +21,7 @@
     "pnpm": "pnpm i  "
   },
   "dependencies": {
+    "tools_dict": "workspace:^",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
