--- a/back6/package.json
+++ b/back6/package.json
@@ -21,7 +21,6 @@
     "pnpm": "pnpm i  "
   },
   "dependencies": {
-    "tools_dict": "workspace:^",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -37,12 +36,14 @@
     "dotenv": "^17.2.2",
     "dotenv-cli": "^9.0.0",
     "lodash": "^4.17.21",
+    "make": "^0.8.1",
     "module-alias": "^2.2.3",
     "nestjs-knife4j2": "^1.0.7",
     "nestjs-zod": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
+    "tools_dict": "workspace:^",
     "zod": "^4.1.11"
   },
   "devDependencies": {
