--- a/vuejs6/package.json
+++ b/vuejs6/package.json
@@ -29,6 +29,7 @@
     "install": "^0.13.0",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
+    "lodash-es": "^4.17.21",
     "marked": "^16.4.1",
     "nestjs-zod": "^5.0.1",
     "pinia": "^3.0.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.16.5",
     "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-vue": "^6.0.1",
